# minigrep-rust

./: Cargo.toml  README.md  events.db  events_mainnet.db  livro.txt  poema.txt
src/: lib.rs  main.rs
src/indexer/: api_client.rs  fetcher.rs  mod.rs  parser.rs
