[package]
name = "minigrep"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"


